[project]
name = "entity-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "lxml>=6.0.0",
    "marimo[recommended]>=0.14.16",
    "pandas>=2.3.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
